Format some missed templates

--- a/lib/adoptoposs_web/templates/explore/subscribed_filters.html.heex
+++ b/lib/adoptoposs_web/templates/explore/subscribed_filters.html.heex
@@ -55,8 +55,9 @@
         </p>
       <% else %>
         <p class="mb-0">
-          ℹ You can follow your favorite languages in
-          <.link navigate={Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.SettingsLive)}>
+          ℹ You can follow your favorite languages in <.link navigate={
+            Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.SettingsLive)
+          }>
             your settings
           </.link>.
           They will appear here as quick filters.
