--- a/lib/adoptoposs_web/templates/settings/index.html.heex
+++ b/lib/adoptoposs_web/templates/settings/index.html.heex
@@ -38,8 +38,9 @@
             />
             <path d="M248 130a26 26 0 1026 26 26 26 0 00-26-26z" />
           </svg>
-          Programming languages you add here will appear as quick filters on the
-          <.link navigate={Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ExploreLive)}>
+          Programming languages you add here will appear as quick filters on the <.link navigate={
+            Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ExploreLive)
+          }>
             explore projects page
           </.link>.
           You can also receive email notifications for new projects in these languages.
