--- a/lib/adoptoposs_web/templates/shared/footer.html.heex
+++ b/lib/adoptoposs_web/templates/shared/footer.html.heex
@@ -21,7 +21,6 @@
     <.link href="https://github.com/phoenixframework/phoenix_live_view" title="Phoenix LiveView">
       Phoenix LiveView
     </.link>
-    |
-    <.link href="https://tailwindcss.com" title="TailwindCSS">Tailwind CSS</.link>
+    | <.link href="https://tailwindcss.com" title="TailwindCSS">Tailwind CSS</.link>
   </div>
 </section>
