--- a/lib/adoptoposs_web/templates/page/faq.html.heex
+++ b/lib/adoptoposs_web/templates/page/faq.html.heex
@@ -41,8 +41,7 @@
       <p>
         Please consider looking for a co-maintainer if you are the <i>only maintainer</i>
         for your project right now. <br />
-        You can read about the benefits of having co-maintainers
-        <.link href="https://medium.com/p/74c1cd5df5d5?source=friends_link&sk=80b575161642c3ba17d6d4213de8578a">
+        You can read about the benefits of having co-maintainers <.link href="https://medium.com/p/74c1cd5df5d5?source=friends_link&sk=80b575161642c3ba17d6d4213de8578a">
           here
         </.link>.
       </p>
@@ -51,8 +50,7 @@
     <%= faq "How can I submit my repo?"  do %>
       <ul class="list-disc list-inner pl-4">
         <li>
-          You can submit a repo on your
-          <.link navigate={Routes.repo_path(@conn, :index)}>repo page</.link>.
+          You can submit a repo on your <.link navigate={Routes.repo_path(@conn, :index)}>repo page</.link>.
         </li>
         <li>
           Select the GitHub organization of your repo at the top of the page.
@@ -73,8 +71,9 @@
     <%= faq "Where can I see my submitted repos?" do %>
       Your submitted repositories are listed on your
       <.link navigate={Routes.live_path(@conn, AdoptopossWeb.ProjectLive)}>projects page</.link>
-      and visible for everyone on the
-      <.link navigate={Routes.live_path(@conn, AdoptopossWeb.ExploreLive)}>
+      and visible for everyone on the <.link navigate={
+        Routes.live_path(@conn, AdoptopossWeb.ExploreLive)
+      }>
         public explore page
       </.link>.
     <% end %>
@@ -115,8 +114,9 @@
 
     <%= faq "How can I find interesting projects?" do %>
       <p>
-        You will find projects on our
-        <.link navigate={Routes.live_path(@conn, AdoptopossWeb.ExploreLive)}>explore page</.link>.
+        You will find projects on our <.link navigate={
+          Routes.live_path(@conn, AdoptopossWeb.ExploreLive)
+        }>explore page</.link>.
         You can search for project names, organizations, and parts of the maintainer’s description. You can filter all projects by selecting the languages you are interested in.
       </p>
 
@@ -157,8 +157,9 @@
 
     <%= faq "How can I subscribe to / unsubscribe from email notifications?" do %>
       <p>
-        You can edit your email notification settings on your
-        <.link navigate={Routes.live_path(@conn, AdoptopossWeb.SettingsLive)}>
+        You can edit your email notification settings on your <.link navigate={
+          Routes.live_path(@conn, AdoptopossWeb.SettingsLive)
+        }>
           settings page
         </.link>.
       </p>
