--- a/lib/adoptoposs_web/templates/explore/filters.html.heex
+++ b/lib/adoptoposs_web/templates/explore/filters.html.heex
@@ -1,4 +1,4 @@
-<div id={@id}>
+<div id={@id} phx-target={@myself}>
   <%= if assigns[:dropdown] do %>
     <details class="w-full mt-2" open={if @filter_selection_open, do: "open"}>
       <summary class="pl-1 mt-2 text-left text-red-500 hover:text-red-500 border-gray-300 w-full">
