--- a/lib/adoptoposs_web/templates/explore/filters.html.heex
+++ b/lib/adoptoposs_web/templates/explore/filters.html.heex
@@ -1,7 +1,7 @@
 <div id={@id} phx-target={@myself}>
   <%= if assigns[:dropdown] do %>
     <details class="w-full mt-2" open={if @filter_selection_open, do: "open"}>
-      <summary class="pl-1 mt-2 text-left text-red-500 hover:text-red-500 border-gray-300 w-full">
+      <summary class="pl-1 mt-2 text-left text-red-400 hover:text-red-400 border-gray-200 w-full">
         <div class="inline">
           <div class="inline-flex items-center">
             <svg
@@ -17,7 +17,7 @@
           <%= if Enum.count(@filters) > 0 do %>
             <div class="inline float-right">
               <button
-                class="button-link inline leading-none inline-flex items-center"
+                class="button-link button-link--inline leading-none"
                 phx-click="clear_filters"
               >
                 clear all <span class="text-2xl ml-1">&times;</span>
@@ -29,7 +29,7 @@
 
       <div class="relative">
         <!-- Subscribed languages filters -->
-        <div class="bg-gray-300 rounded px-4 py-2 mt-4 font-bold">
+        <div class="bg-gray-200 rounded px-4 py-2 mt-4 font-bold">
           Your favorite languages
           <%= if @user_id do %>
             <span class="float-right">
@@ -55,7 +55,7 @@
           ) %>
         </div>
 
-        <div class="bg-gray-300 rounded px-4 py-2 font-bold">
+        <div class="bg-gray-200 rounded px-4 py-2 font-bold">
           Top 10 languages
         </div>
 
@@ -70,7 +70,7 @@
           ) %>
         </div>
 
-        <div class="bg-gray-300 rounded px-4 py-2 font-bold">
+        <div class="bg-gray-200 rounded px-4 py-2 font-bold">
           Search to add language
         </div>
 
@@ -108,7 +108,7 @@
         Project Filters
       </h3>
       <!-- Subscribed languages filters -->
-      <p class="mt-6 px-4 py-2 bg-gray-300 font-bold rounded">
+      <p class="mt-6 px-4 py-2 bg-gray-200 font-bold rounded">
         Your favorite languages
         <%= if @user_id do %>
           <span class="float-right">
@@ -130,7 +130,7 @@
         phx_target: @id
       ) %>
       <!-- Top 10 language filters -->
-      <p class="mt-6 px-4 py-2 bg-gray-300 font-bold rounded">
+      <p class="mt-6 px-4 py-2 bg-gray-200 font-bold rounded">
         Top 10 languages
       </p>
 
@@ -143,7 +143,7 @@
         phx_target: @id
       ) %>
       <!-- Searchable filters -->
-      <p class="mt-6 px-4 py-2 bg-gray-300 font-bold rounded">
+      <p class="mt-6 px-4 py-2 bg-gray-200 font-bold rounded">
         Search to add language
       </p>
 
