--- a/lib/adoptoposs_web/templates/explore/searchable_filters.html.heex
+++ b/lib/adoptoposs_web/templates/explore/searchable_filters.html.heex
@@ -15,7 +15,7 @@
             removeable: true,
             title: AdoptopossWeb.SharedView.count("project", count: project_count),
             class:
-              "p-3 py-1 border rounded cursor-pointer text-white bg-red-500 border-white hover:text-white hover:bg-red-500 hover:border-white"
+              "p-3 py-1 border rounded cursor-pointer text-white bg-red-400 border-white hover:text-white hover:bg-red-400 hover:border-white"
           ) %>
         </button>
       </div>
@@ -44,7 +44,7 @@
 
     <%= unless @query in [nil, ""] do %>
       <button
-        class="button-link inline indented-sm w-5 h-5"
+        class="button-link button-link--inline indented-sm w-5 h-5"
         phx-click="clear_search"
         phx-target={"##{@phx_target}"}
       >
@@ -56,7 +56,7 @@
   <div class="flex flex-row flex-wrap mt-4 md:mt-4">
     <%= if @query && Enum.empty?(@search_results) do %>
       <p class="text-pink-900">
-        No language found for <span class="text-red-500 break-all">"<%= @query %>"</span> :(
+        No language found for <span class="text-red-400 break-all">"<%= @query %>"</span> :(
       </p>
     <% else %>
       <%= for {tag, project_count} <- @search_results do %>
@@ -73,7 +73,7 @@
                 name: tag.name,
                 color: tag.color,
                 title: AdoptopossWeb.SharedView.count("project", count: project_count),
-                class: "p-3 py-1 border rounded cursor-pointer border-gray-400 hover:bg-gray-300"
+                class: "p-3 py-1 border rounded cursor-pointer border-gray-300 hover:bg-gray-200"
               ) %>
             </button>
           <% else %>
@@ -82,7 +82,7 @@
               title: AdoptopossWeb.SharedView.count("project", count: project_count),
               color: Adoptoposs.Tags.Tag.Utility.unknown().color,
               class:
-                "p-3 py-1 border rounded cursor-default bg-gray-200 text-gray-500 border-gray-400"
+                "p-3 py-1 border rounded cursor-default bg-gray-100 text-gray-400 border-gray-300"
             ) %>
           <% end %>
         </div>
