--- a/lib/adoptoposs_web/templates/explore/index.html.heex
+++ b/lib/adoptoposs_web/templates/explore/index.html.heex
@@ -23,7 +23,7 @@
             class="button-link button-link--inline indented w-8 h-8"
             phx-click="clear_search"
           >
-            <span class="text-2xl">&times;</span>
+            <i class="fa-solid fa-xmark"></i>
           </button>
         <% end %>
       </div>
@@ -48,7 +48,7 @@
                   class="button-link button-link--inline leading-none"
                   phx-click="clear_filters"
                 >
-                  clear all <span class="text-2xl ml-1">&times;</span>
+                  clear all <i class="fa-solid fa-xmark ml-1.5"></i>
                 </button>
               </div>
             <% end %>
