--- a/lib/adoptoposs_web/templates/explore/searchable_filters.html.heex
+++ b/lib/adoptoposs_web/templates/explore/searchable_filters.html.heex
@@ -48,7 +48,7 @@
         phx-click="clear_search"
         phx-target={"##{@phx_target}"}
       >
-        <span class="text-xl">&times;</span>
+        <i class="fa-solid fa-xmark"></i>
       </button>
     <% end %>
   </div>
