--- a/lib/adoptoposs_web/templates/explore/subscribed_filters.html.heex
+++ b/lib/adoptoposs_web/templates/explore/subscribed_filters.html.heex
@@ -68,7 +68,7 @@
         navigate={Routes.auth_path(AdoptopossWeb.Endpoint, :request, "github")}
         class="button-link text-center mb-2"
       >
-        Log in with GitHub
+        <i class="fa-brands fa-github mr-1"></i> Log in with GitHub
       </.link>
 
       <p class="mb-0">
