--- a/lib/adoptoposs_web/templates/page/faq.html.heex
+++ b/lib/adoptoposs_web/templates/page/faq.html.heex
@@ -56,10 +56,7 @@
           Select the GitHub organization of your repo at the top of the page.
         </li>
         <li>
-          Click the
-          <span class="border border-red-300 px-2 mx-1 text-red-300 rounded rounded-full leading-none m-0">
-            +
-          </span>
+          Click the <i class="fa-solid fa-circle-plus mx-1 text-red-400"></i>
           button of the repo you want to submit.
         </li>
         <li>
@@ -98,13 +95,7 @@
           landing page
         <% end %>. <br />
         When logged in, you can write a message to the maintainer by clicking the
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 20 20"
-          class="inline-flex w-4 fill-current mx-1 mb-1"
-        >
-          <path d="M18 2a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4c0-1.1.9-2 2-2h16zm-4.37 9.1L20 16v-2l-5.12-3.9L20 6V4l-10 8L0 4v2l5.12 4.1L0 14v2l6.37-4.9L10 14l3.63-2.9z" />
-        </svg>
+        <i class="fa-solid fa-circle-plus text-red-400 mx-1"></i>
         button of a project.
       </p>
       <p>
