--- a/lib/adoptoposs_web/templates/shared/cookies-banner.html.heex
+++ b/lib/adoptoposs_web/templates/shared/cookies-banner.html.heex
@@ -6,6 +6,6 @@
     By using this website you agree to our <a href="/privacy">Cookie Policy</a>.
   </p>
   <a id="close-cookies-banner" class="absolute w-auto right-0 top-0 cursor-pointer text-3xl p-2">
-    &times;
+    <i class="fa-solid fa-xmark"></i>
   </a>
 </div>
