--- a/lib/adoptoposs_web/templates/shared/footer.html.heex
+++ b/lib/adoptoposs_web/templates/shared/footer.html.heex
@@ -1,23 +1,38 @@
 <section>
   <div class="flex flex-row flex-wrap justify-between">
     <ul>
-      <li><a href="/faq" title="Frequently Asked Questions">FAQ</a></li>
       <li>
-        <a href="https://github.com/adoptoposs/adoptoposs/issues/new" title="Open an Issue">
-          Found any bug?
+        <a href="/faq" title="Frequently Asked Questions">
+          <i class="fa-solid fa-question mr-3"></i> FAQ
         </a>
       </li>
-      <li><a href="/privacy" title="Privacy Policy">Privacy Policy</a></li>
-      <li><a href="https://twitter.com/adoptoposs" title="Contact">Contact</a></li>
+      <li>
+        <a href="https://github.com/adoptoposs/adoptoposs/issues/new" title="Open an Issue">
+          <i class="fa-solid fa-bug mr-2"></i> Found a bug?
+        </a>
+      </li>
+      <li>
+        <a href="/privacy" title="Privacy Policy">
+          <i class="fa-solid fa-user-secret mr-2"></i> Privacy Policy
+        </a>
+      </li>
+      <li>
+        <a href="https://twitter.com/adoptoposs" title="Contact">
+          <i class="fa-solid fa-feather mr-2"></i> Contact
+        </a>
+      </li>
     </ul>
 
     <div>
-      <a href="https://github.com/adoptoposs/adoptoposs" title="GitHub Repo">Find us on GitHub</a>
+      <a href="https://github.com/adoptoposs/adoptoposs" title="GitHub Repo">
+        Find us on GitHub <i class="fa-brands fa-github ml-1 text-lg"></i>
+      </a>
     </div>
   </div>
 
   <div class="text-center text-red-400 mt-4 mb-0">
-    Made with ♡ |
+    Made with <i class="fa-regular fa-heart mx-1"></i>
+    |
     <.link href="https://github.com/phoenixframework/phoenix_live_view" title="Phoenix LiveView">
       Phoenix LiveView
     </.link>
