--- a/lib/adoptoposs_web/templates/sharing/project.html.heex
+++ b/lib/adoptoposs_web/templates/sharing/project.html.heex
@@ -37,7 +37,7 @@
         <hr class="flex-grow border-red-200" />
         <div class="self-center">
           <.link navigate={Routes.auth_path(@socket, :request, "github")} class="button-link mx-3">
-            Log in with GitHub
+            <i class="fa-brands fa-github mr-1"></i> Log in with GitHub
           </.link>
         </div>
         <hr class="flex-grow border-red-200" />
