--- a/lib/adoptoposs_web/templates/layout/error.html.heex
+++ b/lib/adoptoposs_web/templates/layout/error.html.heex
@@ -31,14 +31,7 @@
 
         <div class="block lg:hidden">
           <button class="flex items-center px-3 py-2 border-red-200">
-            <svg
-              class="fill-current h-5 w-5"
-              viewBox="0 0 20 20"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <title>Menu</title>
-              <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
-            </svg>
+            <i class="fa-solid fa-bars text-lg"></i>
           </button>
         </div>
 
