--- a/lib/adoptoposs_web/templates/project/index.html.heex
+++ b/lib/adoptoposs_web/templates/project/index.html.heex
@@ -53,15 +53,7 @@
                   <% :published -> %>
                     <div class="flex flex-row w-full justify-between items-center">
                       <span class="inline-flex items-center text-gray-500">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          class="inline w-5 h-5 fill-current mr-2"
-                          viewBox="0 0 512 512"
-                        >
-                          <circle cx="256" cy="256" r="64" />
-                          <path d="M394.82 141.18C351.1 111.2 304.31 96 255.76 96c-43.69 0-86.28 13-126.59 38.48C88.52 160.23 48.67 207 16 256c26.42 44 62.56 89.24 100.2 115.18C159.38 400.92 206.33 416 255.76 416c49 0 95.85-15.07 139.3-44.79C433.31 345 469.71 299.82 496 256c-26.38-43.43-62.9-88.56-101.18-114.82zM256 352a96 96 0 1196-96 96.11 96.11 0 01-96 96z" />
-                        </svg>
-                        Open for messages
+                        <i class="fa-solid fa-eye mr-2"></i> Open for messages
                       </span>
                       <%= reset("Unpublish",
                         id: "btn-unpublish-#{project.id}",
@@ -73,15 +65,7 @@
                   <% :draft -> %>
                     <div class="flex flex-row w-full justify-between items-center">
                       <span class="inline-flex items-center text-gray-500">
-                        <svg
-                          xmlns="http://www.w3.org/2000/svg"
-                          class="w-5 h-5 fill-current mr-2"
-                          viewBox="0 0 512 512"
-                        >
-                          <path d="M63.998 86.004l21.998-21.998L448 426.01l-21.998 21.998zM259.34 192.09l60.57 60.57a64.07 64.07 0 00-60.57-60.57zM252.66 319.91l-60.57-60.57a64.07 64.07 0 0060.57 60.57z" />
-                          <path d="M256 352a96 96 0 01-92.6-121.34l-69.07-69.08C66.12 187.42 39.24 221.14 16 256c26.42 44 62.56 89.24 100.2 115.18C159.38 400.92 206.33 416 255.76 416A233.47 233.47 0 00335 402.2l-53.61-53.6A95.84 95.84 0 01256 352zM256 160a96 96 0 0192.6 121.34L419.26 352c29.15-26.25 56.07-61.56 76.74-96-26.38-43.43-62.9-88.56-101.18-114.82C351.1 111.2 304.31 96 255.76 96a222.92 222.92 0 00-78.21 14.29l53.11 53.11A95.84 95.84 0 01256 160z" />
-                        </svg>
-                        Invisible
+                        <i class="fa-solid fa-eye-slash mr-2"></i> Invisible
                       </span>
 
                       <%= submit("Publish",
@@ -102,16 +86,7 @@
                   phx-value-id={project.id}
                   class="ml-4 icon-button subtle"
                 >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="fill-current"
-                    viewBox="0 0 512 512"
-                  >
-                    <path
-                      d="M296 64h-80a7.91 7.91 0 00-8 8v24h96V72a7.91 7.91 0 00-8-8z"
-                      fill="none"
-                    /><path d="M432 96h-96V72a40 40 0 00-40-40h-80a40 40 0 00-40 40v24H80a16 16 0 000 32h17l19 304.92c1.42 26.85 22 47.08 48 47.08h184c26.13 0 46.3-19.78 48-47l19-305h17a16 16 0 000-32zM192.57 416H192a16 16 0 01-16-15.43l-8-224a16 16 0 1132-1.14l8 224A16 16 0 01192.57 416zM272 400a16 16 0 01-32 0V176a16 16 0 0132 0zm32-304h-96V72a7.91 7.91 0 018-8h80a7.91 7.91 0 018 8zm32 304.57A16 16 0 01320 416h-.58A16 16 0 01304 399.43l8-224a16 16 0 1132 1.14z" />
-                  </svg>
+                  <i class="fa-solid fa-trash-can text-lg"></i>
                 </button>
               <% end %>
             </div>
@@ -151,15 +126,7 @@
                         class="flex flex-row items-center text-gray-400"
                         title="No messages yet"
                       >
-                        <span>
-                          <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            class="inline w-6 h-6 fill-current"
-                            viewBox="0 0 512 512"
-                          >
-                            <path d="M424 80H88a56.06 56.06 0 00-56 56v240a56.06 56.06 0 0056 56h336a56.06 56.06 0 0056-56V136a56.06 56.06 0 00-56-56zm-14.18 92.63l-144 112a16 16 0 01-19.64 0l-144-112a16 16 0 1119.64-25.26L256 251.73l134.18-104.36a16 16 0 0119.64 25.26z" />
-                          </svg>
-                        </span>
+                        <i class="fa-solid fa-envelope text-lg"></i>
                         <span class="ml-2 text-md font-medium">
                           0
                         </span>
@@ -170,16 +137,7 @@
                         class="flex flex-row items-center emphasize"
                         title={"#{Enum.count(project.interests)} people contacted you"}
                       >
-                        <span>
-                          <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            class="inline w-6 h-6 fill-current"
-                            viewBox="0 0 512 512"
-                          >
-                            <path d="M424 80H88a56.06 56.06 0 00-56 56v240a56.06 56.06 0 0056 56h336a56.06 56.06 0 0056-56V136a56.06 56.06 0 00-56-56zm-14.18 92.63l-144 112a16 16 0 01-19.64 0l-144-112a16 16 0 1119.64-25.26L256 251.73l134.18-104.36a16 16 0 0119.64 25.26z" />
-                          </svg>
-                        </span>
-
+                        <i class="fa-solid fa-envelope text-lg"></i>
                         <span class="ml-2 text-md font-medium">
                           <%= Enum.count(project.interests) %>
                         </span>
