--- a/lib/adoptoposs_web/templates/project/sharing.html.heex
+++ b/lib/adoptoposs_web/templates/project/sharing.html.heex
@@ -5,9 +5,7 @@
     title="Share"
     phx-hook="SharingReset"
   >
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-      <path d="M384 336a63.78 63.78 0 00-46.12 19.7l-148-83.27a63.85 63.85 0 000-32.86l148-83.27a63.8 63.8 0 10-15.73-27.87l-148 83.27a64 64 0 100 88.6l148 83.27A64 64 0 10384 336z" />
-    </svg>
+    <i class="fa-solid fa-share-nodes text-lg"></i>
   </summary>
 
   <div class="toggle-content absolute p-4 rounded border border-gray-300 bg-gray-50 shadow shadow-md">
@@ -31,45 +29,11 @@
         phx-hook="SharingCopy"
         data-copy-action
       >
-        <svg xmlns="http://www.w3.org/2000/svg" class="fill-current" viewBox="0 0 512 512">
-          <rect
-            x="128"
-            y="128"
-            width="336"
-            height="336"
-            rx="57"
-            ry="57"
-            fill="none"
-            stroke="currentColor"
-            stroke-linejoin="round"
-            stroke-width="32"
-          />
-          <path
-            d="M383.5 128l.5-24a56.16 56.16 0 00-56-56H112a64.19 64.19 0 00-64 64v216a56.16 56.16 0 0056 56h24"
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="32"
-          />
-        </svg>
+        <i class="fa-solid fa-clipboard"></i>
       </div>
 
       <div class="icon-button subtle ml-3 hidden" title="Copied" data-copy-success>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="text-green-400 fill-current"
-          viewBox="0 0 512 512"
-        >
-          <path
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="32"
-            d="M416 128L192 384l-96-96"
-          />
-        </svg>
+        <i class="fa-solid fa-check text-green-500"></i>
       </div>
     </div>
   </div>
