--- a/lib/adoptoposs_web/templates/repo/index.html.heex
+++ b/lib/adoptoposs_web/templates/repo/index.html.heex
@@ -1,6 +1,6 @@
 <div class="py-4 md:pt-8 md:pb-12 mb-4 md:mb-12 bg-gray-100">
   <section class="flex flex-wrap flex-col md:flex-row justify-center items-center">
-    <h1 class="m-0 md:my-2 md:mr-1">
+    <h1 class="m-0 md:my-2 md:mr-3">
       Submit Repo from
     </h1>
 
@@ -8,18 +8,12 @@
       <form phx-change="organization_selected">
         <div class="inline-block relative w-full">
           <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-600">
-            <svg
-              class="fill-current h-6 w-6 md:h-8 md:w-8 text-pink-900"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 20 20"
-            >
-              <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
-            </svg>
+            <i class="fa-solid fa-chevron-down text-pink-900 text-lg md:text-2xl"></i>
           </div>
 
           <select
             name="id"
-            class="h1 block appearance-none w-full bg-gray-100 py-2 pr-12 leading-tight focus:outline-none text-4xl font-semibold text-pink-900 cursor-pointer"
+            class="h1 block appearance-none h-16 w-full bg-gray-100 pr-12 leading-tight focus:outline-none text-4xl font-semibold text-pink-900 cursor-pointer"
           >
             <%= for organization <- @organizations do %>
               <option
