--- a/lib/adoptoposs_web/templates/shared/navigation_logged_in.html.heex
+++ b/lib/adoptoposs_web/templates/shared/navigation_logged_in.html.heex
@@ -4,111 +4,46 @@
     navigate={Routes.live_path(@conn, AdoptopossWeb.RepoLive, @current_user.username)}
     class="self-center text-md px-4 py-2 leading-none border border-red-300 rounded font-semibold"
   >
-    Submit Repo
+    <i class="fa-solid fa-plus mr-1.5"></i> Submit Repo
   </.link>
 </div>
 
 <details class="toggle close-on-link-clicked block md:hidden self-end">
-  <summary class="toggle-trigger flex items-center px-3 py-2 text-red-400 border border-red-300 rounded hover:text-gray-100 hover:bg-red-400 focus:text-white focus:bg-red-400">
-    <svg class="fill-current h-5 w-5" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-      <title>Menu</title>
-      <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
-    </svg>
+  <summary class="toggle-trigger flex items-center px-3 py-1 text-red-400 border border-red-300 rounded hover:text-gray-100 hover:bg-red-400 focus:text-white focus:bg-red-400">
+    <i class="fa-solid fa-bars text-lg"></i>
   </summary>
 
   <div class="toggle-content absolute left-0 right-0 bg-gray-50 z-20 shadow-md p-6">
     <.link
       navigate={Routes.live_path(@conn, AdoptopossWeb.MessagesLive.Interests)}
-      class="flex items-center p-2 mr-4"
+      class="nav-link"
     >
-      <span class="flex relative items-center">
-        <%= if @notification_count > 0 do %>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 512 512"
-            class="inline w-6 h-6 fill-current mr-2"
-          >
-            <title>Messages Unread</title>
-            <path
-              d="M320 96H88a40 40 0 00-40 40v240a40 40 0 0040 40h334.73a40 40 0 0040-40V239"
-              fill="none"
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="32"
-            />
-            <path
-              fill="none"
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="32"
-              d="M112 160l144 112 87-65.67"
-            />
-            <circle cx="431.95" cy="128.05" r="47.95" />
-            <path d="M432 192a63.95 63.95 0 1163.95-63.95A64 64 0 01432 192zm0-95.9a32 32 0 1031.95 32 32 32 0 00-31.95-32z" />
-          </svg>
-        <% else %>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 512 512"
-            class="inline w-6 h-6 fill-current mr-2"
-          >
-            <title>Messages</title>
-            <rect
-              x="48"
-              y="96"
-              width="416"
-              height="320"
-              rx="40"
-              ry="40"
-              fill="none"
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="32"
-            />
-            <path
-              fill="none"
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="32"
-              d="M112 160l144 112 144-112"
-            />
-          </svg>
-        <% end %>
-      </span>
-      <span class="inline">Messages</span>
+      <%= if @notification_count > 0 do %>
+        <i class="fa-solid fa-envelope-open-text mr-2"></i>
+      <% else %>
+        <i class="fa-solid fa-envelope mr-2"></i>
+      <% end %>
+      Messages
     </.link>
 
-    <.link
-      navigate={Routes.live_path(@conn, AdoptopossWeb.ExploreLive)}
-      class="flex items-center p-2"
-    >
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 20 20"
-        class="inline h-4 w-4 fill-current mr-4"
-      >
-        <path d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z" />
-      </svg>
+    <.link navigate={Routes.live_path(@conn, AdoptopossWeb.ExploreLive)} class="nav-link">
+      <i class="fa-solid fa-magnifying-glass mr-2"></i>
       <span class="inline">Explore</span>
     </.link>
 
     <.link navigate={Routes.live_path(@conn, AdoptopossWeb.ProjectLive)} class="nav-link">
-      Your Projects
+      <i class="fa-solid fa-list mr-2"></i> Your Projects
     </.link>
 
     <.link navigate={Routes.live_path(@conn, AdoptopossWeb.SettingsLive)} class="nav-link">
-      Settings
+      <i class="fa-solid fa-gear mr-2"></i> Settings
     </.link>
 
     <hr class="border-red-100 mt-4 mb-3" />
 
     <div class=" flex flex-row justify-between items-center">
       <.link navigate={Routes.auth_path(@conn, :delete)} class="nav-link flex-grow mr-2">
-        Log out
+        <i class="fa-solid fa-arrow-right-from-bracket mr-2"></i> Log out
       </.link>
 
       <img class="rounded-full h-10 w-10" src={@current_user.avatar_url} alt={@current_user.name} />
@@ -127,60 +62,9 @@
     >
       <span class="flex relative items-center">
         <%= if @notification_count > 0 do %>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 512 512"
-            class="inline w-6 h-6 fill-current mr-2"
-          >
-            <title>Messages Unread</title>
-            <path
-              d="M320 96H88a40 40 0 00-40 40v240a40 40 0 0040 40h334.73a40 40 0 0040-40V239"
-              fill="none"
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="32"
-            />
-            <path
-              fill="none"
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="32"
-              d="M112 160l144 112 87-65.67"
-            />
-            <circle cx="431.95" cy="128.05" r="47.95" />
-            <path d="M432 192a63.95 63.95 0 1163.95-63.95A64 64 0 01432 192zm0-95.9a32 32 0 1031.95 32 32 32 0 00-31.95-32z" />
-          </svg>
+          <i class="fa-solid fa-envelope-open-text mr-2"></i>
         <% else %>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 512 512"
-            class="inline w-6 h-6 fill-current mr-2"
-          >
-            <title>Messages</title>
-            <rect
-              x="48"
-              y="96"
-              width="416"
-              height="320"
-              rx="40"
-              ry="40"
-              fill="none"
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="32"
-            />
-            <path
-              fill="none"
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="32"
-              d="M112 160l144 112 144-112"
-            />
-          </svg>
+          <i class="fa-solid fa-envelope mr-2"></i>
         <% end %>
       </span>
       <span class="inline">
@@ -192,28 +76,7 @@
       navigate={Routes.live_path(@conn, AdoptopossWeb.ExploreLive)}
       class="flex items-center p-2 mr-4"
     >
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 512 512"
-        class="inline h-6 w-6 fill-current mr-2"
-      >
-        <title>Search</title>
-        <path
-          d="M221.09 64a157.09 157.09 0 10157.09 157.09A157.1 157.1 0 00221.09 64z"
-          fill="none"
-          stroke="currentColor"
-          stroke-miterlimit="10"
-          stroke-width="32"
-        />
-        <path
-          fill="none"
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-miterlimit="10"
-          stroke-width="32"
-          d="M338.29 338.29L448 448"
-        />
-      </svg>
+      <i class="fa-solid fa-magnifying-glass mr-2"></i>
       <span class="inline font-semibold">Explore</span>
     </.link>
 
@@ -221,7 +84,7 @@
       navigate={Routes.live_path(@conn, AdoptopossWeb.RepoLive, @current_user.username)}
       class="flex self-center button-link subtle mr-4"
     >
-      Submit Repo
+      <i class="fa-solid fa-plus mr-1.5"></i> Submit Repo
     </.link>
   </div>
   <!-- User account menu -->
@@ -239,22 +102,22 @@
         <div class="toggle-content absolute right-0 left-auto py-2 mt-2 rounded border border-red-200 bg-gray-50 shadow-md w-max-content font-semibold">
           <.link
             navigate={Routes.live_path(@conn, AdoptopossWeb.ProjectLive)}
-            class="block px-8 py-2 text-right"
+            class="group nav-link"
           >
-            Your Projects
+            <i class="fa-solid fa-list mr-2"></i> Your Projects
           </.link>
 
           <.link
             navigate={Routes.live_path(@conn, AdoptopossWeb.SettingsLive)}
-            class="block px-8 py-2 text-right"
+            class="group nav-link"
           >
-            Settings
+            <i class="fa-solid fa-gear mr-2"></i> Settings
           </.link>
 
           <hr class="border-red-100 border mt-2 mb-1" />
 
-          <.link navigate={Routes.auth_path(@conn, :delete)} class="block px-8 py-2 text-right">
-            Log out
+          <.link navigate={Routes.auth_path(@conn, :delete)} class="group nav-link">
+            <i class="fa-solid fa-arrow-right-from-bracket mr-2"></i> Log out
           </.link>
         </div>
       </div>
