Fix cookie banner layout
Fixes #116

--- a/lib/adoptoposs_web/templates/shared/cookies-banner.html.heex
+++ b/lib/adoptoposs_web/templates/shared/cookies-banner.html.heex
@@ -1,11 +1,14 @@
 <div
-  class="w-full fixed bottom-0 bg-gray-800 flex items-center justify-center py-4 cookies-box hidden"
+  class="w-full fixed bottom-0 bg-gray-800 flex justify-items-start items-center place-content-between py-4 px-2 cookies-box hidden"
   id="cookies-banner"
 >
-  <p class="text-white text-center m-0">
-    By using this website you agree to our <a href="/privacy">Cookie Policy</a>.
+  <p class="text-white text-center m-0 flex-1">
+    By using this website you agree to our <a href="/privacy">Cookie Policy.</a>
   </p>
-  <a id="close-cookies-banner" class="absolute w-auto right-0 top-0 cursor-pointer text-3xl p-2">
+  <a
+    id="close-cookies-banner"
+    class="inline-flex place-content-center items-center cursor-pointer w-10 h-10 p-2 ml-2"
+  >
     <i class="fa-solid fa-xmark"></i>
   </a>
 </div>
